Fixed image contrast on color theme change

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,6 @@
   --bg-color: #000000;
   --text-color: #ffffff;
 
-  --color-theme-slider: rgb(194, 194, 194);
-
   --default-padding: 20px;
   --primary-color-dark: #ffffff;
   --primary-color-light: #003135;
@@ -114,32 +112,30 @@ header span,
 
 nav {
   display: none;
-  position: fixed;
-  left: 0;
-  top: 0;
-  overflow-x: hidden;
-  z-index: 10;
   font-family: Arial, Helvetica, sans-serif;
+  position: fixed;
+  width: 100lvw;
+  height: 100lvh;
+  right: 0;
+  top: 0;
+  z-index: 5;
+  overflow-x: hidden;
   background-color: rgba(32, 32, 32, 0.95);
   backdrop-filter: blur(15px);
+  transition: 1s;
+  padding-top: 100px;
 }
 
 .fa-x {
   position: absolute;
   top: 25.5px;
-  right: 3%;
+  right: 2.5%;
   cursor: pointer;
   color: white;
 }
 
 .fa-bars {
   cursor: pointer;
-}
-
-nav ul {
-  width: 100lvw;
-  height: 100lvh;
-  padding-top: 100px;
 }
 
 nav ul,
@@ -166,18 +162,32 @@ nav ul li a:visited {
 }
 
 .stat-vector {
-  width: 20px;
+  width: 25px;
+  height: 40px;
+  filter: invert(1);
 }
 
-.stat-container,
-.stat-item {
+.stat-container {
   display: flex;
+  text-align: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+}
+
+.stat-item {
+  width: 150px;
+  height: 50px;
+  margin: 0 7.5px;
+  border-radius: 15px;
+  background-color: #272727a2;
+  padding: 3px 15px;
+  display: flex;
+  justify-content: space-around;
   align-items: center;
-  justify-content: space-between;
 }
 
 .stat-text {
-  font-size: 0.7rem;
+  font-size: 0.75em;
   padding-left: 5px;
 }
 
@@ -190,7 +200,7 @@ nav ul li a:visited {
 
 .skills-item {
   width: 100%;
-  height: 75px;
+  height: 100px;
   background-color: var(--skills-bg-color);
   display: flex;
   flex-direction: column;
@@ -199,6 +209,8 @@ nav ul li a:visited {
   font-size: 0.7rem;
   border-radius: 10px;
   font-family: "Nobile";
+  word-wrap: wrap;
+  text-align: center;
 }
 
 .skills-logo {
@@ -217,4 +229,15 @@ nav ul li a:visited {
 
 .contacts-logo {
   height: 50px;
+}
+
+#gmail-logo {
+  width: 85%;
+}
+
+#github-logo {
+  filter: invert(100%);
+}
+
+@media (min-width: 500px) {
 }
